# TBP-GUiIO

./: .gitignore  Combinear.qss  README.md  TBP_visualisation.ui  abc_alg.py  data_load.py  gui.py  plot_functions.py  pso.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
GUI Files/: gui.py
LICENCES/: LICENSE
Orbits/: L2_35.txt  L2_7days.txt
Sources/: abc_alg.py  data_load.py  plot_functions.py  pso.py
docs/assets/: GUI_uml.txt  algorithms_logic.txt
gui_files/: TBP_visualisation.py  TBP_visualisation.ui  en_translation.qm  en_translation.ts  gui.py  user_inputs.py  visualisation.py
orbits/: ID_16.txt  ID_49.txt  L2_1524.txt  L2_821.txt
parameter_test/: param_test.py
parameter_test/data/test1/: params.json  result.csv
parameter_test/data/test2/: params.json  result.csv
parameter_test/data/test3/: params.json  result.csv
parameter_test/data/test4/: params.json  result.csv
parameter_test/data/test5/: params.json  result.csv
parameter_test/data/test6/: params.json  result.csv
parameter_test/data/test7/: params.json  result.csv
sources/: abc_alg.py  common_elements.py  constant.py  data_load.py  data_structures.py  firefly_alg.py  genetic_alg.py  gpu_functions.py  gpu_functions_test.py  plot_functions.py  pso.py
tests/: firefly_test.py  results_firefly.py  test_algorithms.py
