[tool.poetry]
name = "tbp-guiio"
version = "0.1.0"
description = ""
authors = ["KGrobelski <kgrobelski@student.agh.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "6.7.1"
matplotlib = "3.9.2"
numpy = "1.26.4"
scipy = "1.13.1"
pandas = "2.2.2"
pytest = "7.4.4"
pytest-cov = "6.0.0"
pytest-mock = "3.14.0"
pytest-qt = "4.2.0"
pylint = "^3.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
